--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,5 +3,6 @@ $white: #fff;
 $black: #000;
 $gray: #F6F6F6;
 $font-family: 'Montserrat', sans-serif;
+$headings-weight: 700;
 $font-weight: 500;
 $regular-weight: 400;
