--- a/src/styles/Collapse.scss
+++ b/src/styles/Collapse.scss
@@ -22,6 +22,7 @@
         border:none;
         width:100%;
         font-size: 24px;
+        cursor: pointer;
 
         img{
             width:24px;
@@ -43,15 +44,24 @@
     }
 
     &-hidden{
-        opacity:0;
-        max-height:0;
+        opacity: 0;
+        max-height: 0;
+        transform:scaleY(0%);
         transition: all 250ms ease-in-out;
     }
 
     &-visible{
         opacity: 1;
-        max-height:auto;
+        max-height: max-content;
+        transform:scaleY(100%);
         transition: all 250ms ease-in-out;
     }
+}
 
+.chevron{
+    transition:transform 350ms ease-in-out;
+    transform:rotate(0);
+    &-animated{
+        transform:rotate(-180deg);
+    }
 }
