--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,5 @@
 @import "variables.scss";
+@import "mixins.scss";
 
 body{
     font-family: $font-family;
@@ -8,6 +9,11 @@ body{
 .container{
     max-width: 1240px;
     margin:0 auto;
+    padding:0 20px;
+
+    @include tablet{
+        padding:0;
+    }
 }
 
 img{
