--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -1,4 +1,5 @@
 @import "variables.scss";
+@import "mixins.scss";
 
 .card{
     color:$white;
@@ -14,7 +15,7 @@
         left:0;
         bottom:0;
         width: 100%;
-        height:20%;
+        height:50%;
     }
 
     &-title{
