--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,4 +1,5 @@
 @import "variables.scss";
+@import "mixins.scss";
 
 footer{
     background-color: $black;
@@ -7,9 +8,13 @@ footer{
     padding:66px 0 29px 0;
 
     p{
-        font-size: 1.5rem;
+        font-size:12px;
         margin-bottom: 0;
         margin-top:36px;
+
+        @include tablet{
+            font-size: 1.5rem;
+        }
     }
 
 }
