--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,4 +1,5 @@
 @import "variables.scss";
+@import "mixins.scss";
 
 nav{
     display: flex;
@@ -6,6 +7,10 @@ nav{
     a{
         text-decoration: none;
         font-size: 12px;
-        font-size: 24px;
+        text-transform: uppercase;
+        @include tablet{
+            font-size: 24px;
+            text-transform: none;
+        }
     }
 }
