--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -12,5 +12,8 @@ nav{
             font-size: 24px;
             text-transform: none;
         }
+        &.active{
+            text-decoration: underline;
+        }
     }
 }
