--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -21,8 +21,9 @@
     &-title{
         font-size:18px;
         position: absolute;
-        left:20px;
-        bottom:20px;
+        left:0;
+        bottom:0;
+        margin: 0;
     }
 
     &-img{
