--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -8,22 +8,17 @@
     overflow: hidden;
     min-height: 340px;
 
-    &:before{
-        content:'';
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0), #000000a3);
-        position: absolute;
-        left:0;
-        bottom:0;
-        width: 100%;
-        height:50%;
-    }
-
     &-title{
-        font-size:18px;
+        font-size:toRem(18);
         position: absolute;
         left:0;
         bottom:0;
         margin: 0;
+        width: 100%;
+        padding: toRem(20);
+        font-weight: $font-weight;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0), $primary);
+        box-sizing: border-box;
     }
 
     &-img{
