--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -49,3 +49,10 @@ $desktop: 1024;
     @content;
   }
 }
+
+/* Function to convert into Rem units */
+
+@function toRem($value) {
+  $remValue: calc($value / 16) + rem;	
+  @return $remValue;
+}
