Created Host component and edited accomodation component

--- a/src/styles/Accomodation.scss
+++ b/src/styles/Accomodation.scss
@@ -3,6 +3,7 @@
 
 .accomodation{
     &-container{
+        margin-bottom:toRem(15);
         @include tablet{
             display: flex;
             justify-content: space-between;
