--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -3,8 +3,9 @@
 
 .banner-container{
     position: relative;
-    border-radius: 25px;
+    border-radius: $border-radius;
     overflow: hidden;
+    margin-bottom:toRem(20);
 
     &:before{
         content:'';
