--- a/src/styles/Slideshow.scss
+++ b/src/styles/Slideshow.scss
@@ -8,7 +8,7 @@
     margin-bottom: toRem(15);
     @include tablet{
         max-height: toRem(415);
-        border-radius: toRem(25);
+        border-radius: $border-radius;
         margin-bottom: 0;
     }
 }
