--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -3,7 +3,10 @@
 
 nav{
     display: flex;
-    gap:57px;
+    gap:toRem(26);
+    @include tablet{
+        gap:toRem(57);
+    }
     a{
         text-decoration: none;
         font-size: 12px;
