Edited Slideshow component, added handlePrev, handleNext click events and count, sass stylings

--- a/src/styles/Collapse.scss
+++ b/src/styles/Collapse.scss
@@ -34,6 +34,7 @@
         @include tablet{
             font-size: toRem(24);
             padding: toRem(15);
+            border-radius: toRem(10);
         }
 
         img{
