Added proptypes to Banner component, edited responsive stylings

--- a/src/styles/Accomodation.scss
+++ b/src/styles/Accomodation.scss
@@ -47,7 +47,11 @@
         list-style: none;
         padding: 0;
         gap:toRem(10);
-        margin:toRem(24) 0;
+        margin:toRem(15) 0;
+
+        @include tablet{
+            margin:toRem(24) 0;
+        }
 
         >li{
             background-color: $primary;
@@ -55,6 +59,10 @@
             border-radius: toRem(10);
             text-align: center;
             padding: toRem(7) toRem(20);
+            font-size:toRem(10);
+            @include tablet{
+                font-size:toRem(14);
+            }
         }
     }
 
