--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -12,12 +12,13 @@ footer{
 
     p{
         font-size:toRem(12);
-        margin-bottom: 0;
-        margin-top:toRem(10);
+        margin: toRem(10) auto 0 auto;
+        width: 15ch;
 
         @include tablet{
             font-size: 1.5rem;
             margin-top:toRem(36);
+            width: auto;
         }
     }
 
