--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -6,8 +6,10 @@
     border-radius: toRem(10);
     overflow: hidden;
     margin-bottom:toRem(20);
+    padding:toRem(32) toRem(16);
     @include tablet{
         border-radius: $border-radius;
+        padding:toRem(78);
     }
 
     &:before{
@@ -22,24 +24,29 @@
     }
 
     h1{
-        position: absolute;
-        left:50%;
-        top:50%;
-        transform: translate(-50%,-50%);
         margin: 0;
         font-size:1.5rem;
         font-weight: 500;
         color:$white;
-        white-space: nowrap;
+        position: relative;
+        z-index: 1;
+        line-height: 1;
 
         @include tablet{
             font-size:3rem;
+            text-align: center;
+            line-height: normal;
         }
     }
 
     img{
         width: 100%;
+        height: 100%;
+        position: absolute;
+        top:0;
+        left:0;
         object-fit: cover;
         vertical-align: top;
+        z-index: -1;
     }
 }
