--- a/src/styles/Collapse.scss
+++ b/src/styles/Collapse.scss
@@ -4,7 +4,6 @@
 .collapse{
     margin-bottom:20px;
     margin-bottom:30px;
-    
     font-size:toRem(13);
     @include tablet {
         font-size: toRem(18);
@@ -36,7 +35,7 @@
         cursor: pointer;
         @include tablet{
             font-size: toRem(24);
-            padding: toRem(15);
+            padding: toRem(15) toRem(24) toRem(15) toRem(15);
             border-radius: toRem(10);
         }
 
