--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -17,7 +17,7 @@
         width: 100%;
         padding: toRem(20);
         font-weight: $font-weight;
-        background: linear-gradient(180deg, rgba($primary, 0.05), $primary);
+        background: linear-gradient(180deg, rgba($primary, 0.05), $black);
         box-sizing: border-box;
     }
 
